# l2-bridge

./: .gitignore  Anchor.toml  README.md
idls/: message.json
programs/bridge/src/: lib.rs
programs/message/: Cargo.toml
programs/message/src/: lib.rs
tests/: bridge.ts  message.ts  view.ts
