[package]
name = "message"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "message"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/HONGYI-SD/anchor.git", branch = "dd_anchor", features = [
  "init-if-needed",
] }
# anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
dd-merkle-tree = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
